krb-821 fix gap

--- a/src/components/UI/Toolbar/Toolbar.module.scss
+++ b/src/components/UI/Toolbar/Toolbar.module.scss
@@ -45,7 +45,7 @@
 
 .ToolbarItem {
   display: flex;
-  gap: var(--small-gap);
+  gap: var(--tiny-gap);
   flex-direction: row;
   width: fit-content;
 
